force-app/main/default/objects/Contact/fields/Lead_Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Channel__c</fullName>
    <label>Lead Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>(LF_ID_MAR)</fullName>
            </value>
            <value>
                <fullName>AA_B2B_MAS</fullName>
            </value>
            <value>
                <fullName>AA_DamJeddah_Tower</fullName>
            </value>
            <value>
                <fullName>AAI_DB</fullName>
            </value>
            <value>
                <fullName>Abdulrahman_Abdulaziz</fullName>
            </value>
            <value>
                <fullName>Acive Pipe</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Alanazi_DB</fullName>
            </value>
            <value>
                <fullName>Albandari Alqunab</fullName>
            </value>
            <value>
                <fullName>AliGarni_AAS</fullName>
            </value>
            <value>
                <fullName>Alsfgat_Alawal_Ahmad</fullName>
            </value>
            <value>
                <fullName>Arabin_mumtalkat</fullName>
            </value>
            <value>
                <fullName>B2B Bandari</fullName>
            </value>
            <value>
                <fullName>Bandari_AS</fullName>
            </value>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>Bing Ads</fullName>
            </value>
            <value>
                <fullName>Blogs</fullName>
            </value>
            <value>
                <fullName>Book a viewing EDM</fullName>
            </value>
            <value>
                <fullName>Book a viewing  EDM (Open House event)</fullName>
            </value>
            <value>
                <fullName>Book a Viewing SMS</fullName>
            </value>
            <value>
                <fullName>Book a viewing  SMS (Open House event)</fullName>
            </value>
            <value>
                <fullName>Brevo</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>DataSource</fullName>
            </value>
            <value>
                <fullName>DHE_DXB</fullName>
            </value>
            <value>
                <fullName>Display Dynamic rmkt</fullName>
            </value>
            <value>
                <fullName>DXB_PJ</fullName>
            </value>
            <value>
                <fullName>DXB-DT</fullName>
            </value>
            <value>
                <fullName>EDM</fullName>
            </value>
            <value>
                <fullName>EH_DXB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>