force-app/main/default/objects/Contact/fields/LeadSourceDetail_pb__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceDetail_pb__c</fullName>
    <label>Lead Source Detail</label>
    <length>200</length>
    <type>Text</type>
</CustomField>