force-app/main/default/objects/Contact/fields/Listing_Count__c.field-meta.xml
<CustomField>
    <fullName>Listing_Count__c</fullName>
    <label>Listing Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>