force-app/main/default/objects/Contact/fields/Listing_Type_Contact__c.field-meta.xml
<CustomField>
    <fullName>Listing_Type_Contact__c</fullName>
    <label>Listing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>