force-app/main/default/objects/Contact/fields/Listings__c.field-meta.xml
<CustomField>
    <fullName>Listings__c</fullName>
    <label>Listings</label>
    <length>100</length>
    <type>Text</type>
</CustomField>