force-app/main/default/objects/Contact/fields/LXT_ID__c.field-meta.xml
<CustomField>
    <fullName>LXT_ID__c</fullName>
    <label>LXT_ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>