force-app/main/default/objects/Contact/fields/LXT_LEAD_ID__c.field-meta.xml
<CustomField>
    <fullName>LXT_LEAD_ID__c</fullName>
    <label>LXT_LEAD_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>