force-app/main/default/objects/Contact/fields/LXT_LISTING_ID__c.field-meta.xml
<CustomField>
    <fullName>LXT_LISTING_ID__c</fullName>
    <label>LXT_LISTING_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>