force-app/main/default/objects/Contact/fields/Message_Contact__c.field-meta.xml
<CustomField>
    <fullName>Message_Contact__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>