force-app/main/default/objects/Contact/fields/Mobile_country_code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_country_code__c</fullName>
    <label>Mobile Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mobile_country_codes</valueSetName>
    </valueSet>
</CustomField>