force-app/main/default/objects/Contact/fields/Mobile_Country_Formula__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country_Formula__c</fullName>
    <formula>CASE( Mobile_country_code__c , 
&apos;+91&apos;,&apos;India&apos;, 
&apos;+93&apos;,&apos;Afghanistan&apos;,
&apos;+355&apos;,&apos;Albania&apos;,
&apos;+213&apos;,&apos;Algeria&apos;,
&apos;+1-684&apos;,&apos;American Samoa&apos;,
&apos;+376&apos;,&apos;Andorra &apos;,
&apos;+244&apos;,&apos;Angola&apos;,
&apos;1-264&apos;,&apos;Anguilla&apos;,
&apos;+672&apos;,&apos;Australian Antarctic Territory&apos;,
&apos;+1-268&apos;,&apos;Antigua and Barbuda&apos;,
&apos;+54&apos;,&apos;Argentina&apos;,
&apos;+374&apos;,&apos;Armenia&apos;,
&apos;+297&apos;,&apos;Aruba&apos;,
&apos;+61&apos;,&apos;Australia&apos;,
&apos;+43&apos;,&apos;Austria&apos;,
&apos;+994&apos;,&apos;Azerbaijan&apos;,
&apos;+1-242&apos;,&apos;Bahamas&apos;,
&apos;+973&apos;,&apos;Bahrain&apos;,
&apos;+883&apos;,&apos;Bangladesh&apos;,
&apos;+1-246&apos;,&apos;Barbados&apos;,
&apos;+375&apos;,&apos;Belarus&apos;,
&apos;+32&apos;,&apos;Belgium &apos;,
&apos;+501&apos;,&apos;Belize&apos;,
&apos;+229&apos;,&apos;Benin&apos;,
&apos;+1-441&apos;,&apos;Bermuda&apos;,
&apos;+975&apos;,&apos;Bhutan&apos;,
&apos;+591&apos;,&apos;Bolivia&apos;,
&apos;+387&apos;,&apos;Bosnia and Herzegovina&apos;,
&apos;+267&apos;,&apos;Botswana&apos;,
&apos;+55&apos;,&apos;Brazil&apos;,
&apos;+246&apos;,&apos;Diego Garcia&apos;,
&apos;+1-284&apos;,&apos;British Virgin Islands&apos;,
&apos;+673&apos;,&apos;Brunei&apos;,
&apos;+359&apos;,&apos;Bulgaria&apos;,
&apos;+226&apos;,&apos;Burkina Faso&apos;,
&apos;+257&apos;,&apos;Burundi&apos;,
&apos;+855&apos;,&apos;Cambodia&apos;,
&apos;+237&apos;,&apos;Cameroon&apos;,
&apos;+1&apos;,&apos;United States&apos;,
&apos;+238&apos;,&apos;Cabo Verde&apos;,
&apos;+1-345&apos;,&apos;Cayman Islands&apos;,
&apos;+1-236&apos;,&apos;Central African&apos;,
&apos;+1-235&apos;,&apos;Chad&apos;,
&apos;+56&apos;,&apos;Chile&apos;,
&apos;+86&apos;,&apos;China&apos;,
&apos;+57&apos;,&apos;Colombia&apos;,
&apos;+269&apos;,&apos;Comoros&apos;,
&apos;+682&apos;,&apos;Cook Islands&apos;,
&apos;+506&apos;,&apos;Costa Rica&apos;,
&apos;+385&apos;,&apos;Croatia&apos;,
&apos;+53&apos;,&apos;Cuba&apos;,
&apos;+599&apos;,&apos;Netherlands Antilles&apos;,
&apos;+357&apos;,&apos;Cyprus&apos;,
&apos;+420&apos;,&apos;Czech Republic&apos;,
&apos;+243&apos;,&apos;DR Congo&apos;,
&apos;+45&apos;,&apos;Denmark&apos;,
&apos;+253&apos;,&apos;Djibouti&apos;,
&apos;+1-767&apos;,&apos;Dominica&apos;,
&apos;+1-809&apos;,&apos;Dominican Republic&apos;,
&apos;+1-829&apos;,&apos;Dominican Republic&apos;,
&apos;+1-849&apos;,&apos;Dominican Republic&apos;,
&apos;+670&apos;,&apos;Timor-Leste&apos;,
&apos;+593&apos;,&apos;Ecuador&apos;,
&apos;+20&apos;,&apos;Egypt&apos;,
&apos;+503&apos;,&apos;El Salvador&apos;,
&apos;+240&apos;,&apos;Equatorial Guinea&apos;,
&apos;+291&apos;,&apos;Eritrea&apos;,
&apos;+372&apos;,&apos;Estonia&apos;,
&apos;+251&apos;,&apos;Ethiopia&apos;,
&apos;+500&apos;,&apos;Falkland Islands&apos;,
&apos;+298&apos;,&apos;Faroe Islands&apos;,
&apos;+679&apos;,&apos;Fiji&apos;,
&apos;+358&apos;,&apos;Finland&apos;,
&apos;+33&apos;,&apos;France&apos;,
&apos;+689&apos;,&apos;French Polynesia&apos;,
&apos;+241&apos;,&apos;Gabon&apos;,
&apos;+220&apos;,&apos;Gambia&apos;,
&apos;+995&apos;,&apos;Georgia&apos;,
&apos;+49&apos;,&apos;Germany&apos;,
&apos;+233&apos;,&apos;Ghana&apos;,
&apos;+350&apos;,&apos;Gibraltar&apos;,
&apos;+30&apos;,&apos;Greece&apos;,
&apos;+299&apos;,&apos;Greenland &apos;,
&apos;+1-473&apos;,&apos;Grenada&apos;,
&apos;1-671&apos;,&apos;Guam.&apos;,
&apos;+502&apos;,&apos;Guatemala&apos;,
&apos;+44-1481&apos;,&apos;Guernsey&apos;,
&apos;+224&apos;,&apos;Guinea&apos;,
&apos;+245&apos;,&apos;Guinea-Bissau&apos;,
&apos;+592&apos;,&apos;Guyana&apos;,
&apos;+509&apos;,&apos;Haiti &apos;,
&apos;+504&apos;,&apos;Honduras&apos;,
&apos;+852&apos;,&apos;Hong Kong&apos;,
&apos;+36&apos;,&apos;Hungary&apos;,
&apos;+354&apos;,&apos;Iceland&apos;,
&apos;+62&apos;,&apos;Indonesia&apos;,
&apos;+98&apos;,&apos;Iran&apos;,
&apos;+964&apos;,&apos;Iraq&apos;,
&apos;+39&apos;,&apos;Italy&apos;,
&apos;+225&apos;,&apos;Côte dIvoire&apos;,
&apos;+1-876&apos;,&apos;Jamaica&apos;,
&apos;+81&apos;,&apos;Japan&apos;,
&apos;+353&apos;,&apos;Ireland&apos;,
&apos;+44-1624&apos;,&apos;Isle of Man&apos;,
&apos;+972&apos;,&apos;Israel&apos;,
&apos;+44-1534&apos;,&apos;Jersey&apos;,
&apos;+962&apos;,&apos;Jordan&apos;,
&apos;+7&apos;,&apos;Russia&apos;,
&apos;+254&apos;,&apos;Kenya&apos;,
&apos;+686&apos;,&apos;Kiribati&apos;,
&apos;+383&apos;,&apos;Kosovo&apos;,
&apos;+965&apos;,&apos;Kuwait&apos;,
&apos;+996&apos;,&apos;Kyrgyzstan&apos;,
&apos;+856&apos;,&apos;Laos&apos;,
&apos;+371&apos;,&apos;Latvia&apos;,
&apos;+961&apos;,&apos;Lebanon&apos;,
&apos;+266&apos;,&apos;Lesotho&apos;,
&apos;+231&apos;,&apos;Liberia&apos;,
&apos;+218&apos;,&apos;Libya&apos;,
&apos;+423&apos;,&apos;Liechtenstein&apos;,
&apos;+370&apos;,&apos;Worldometer&apos;,
&apos;+352&apos;,&apos;Luxembourg&apos;,
&apos;+853&apos;,&apos;Macao&apos;,
&apos;+389&apos;,&apos;North Macedonia&apos;,
&apos;+261&apos;,&apos;Madagascar&apos;,
&apos;+265&apos;,&apos;Malawi&apos;,
&apos;+60&apos;,&apos;Malaysia&apos;,
&apos;+960&apos;,&apos;Maldives&apos;,
&apos;+223&apos;,&apos;Mali&apos;,
&apos;+356&apos;,&apos;Malta&apos;,
&apos;+692&apos;,&apos;Marshall Islands&apos;,
&apos;+222&apos;,&apos;Mauritania&apos;,
&apos;+230&apos;,&apos;Mauritius&apos;,
&apos;+262&apos;,&apos;Mayotte&apos;,
&apos;+52&apos;,&apos;Mexico&apos;,
&apos;+691&apos;,&apos;Federated States of Micronesia&apos;,
&apos;+373&apos;,&apos;Moldova&apos;,
&apos;+677&apos;,&apos;Monaco&apos;,
&apos;+976&apos;,&apos;Mongolia&apos;,
&apos;+382&apos;,&apos;Montenegro&apos;,
&apos;+1-664&apos;,&apos;Montserrat&apos;,
&apos;+212&apos;,&apos;Morocco&apos;,
&apos;+258&apos;,&apos;Mozambique&apos;,
&apos;+95&apos;,&apos;Myanmar&apos;,
&apos;+264&apos;,&apos;Namibia &apos;,
&apos;+674&apos;,&apos;Nauru&apos;,
&apos;+977&apos;,&apos;Nepal&apos;,
&apos;+31&apos;,&apos;Netherlands &apos;,
&apos;+687&apos;,&apos;New Caledonia&apos;,
&apos;+64&apos;,&apos;New Zealand&apos;,
&apos;+505&apos;,&apos;Nicaragua&apos;,
&apos;+227&apos;,&apos;Niger&apos;,
&apos;+234&apos;,&apos;Nigeria&apos;,
&apos;+683&apos;,&apos;Niue&apos;,
&apos;+850&apos;,&apos;North Korea&apos;,
&apos;+1-670&apos;,&apos;Timor-Leste&apos;,
&apos;+47&apos;,&apos; Norway&apos;,
&apos;+968&apos;,&apos;Oman&apos;,
&apos;+92&apos;,&apos;Pakistan&apos;, 
&apos;+680&apos;,&apos;Palau&apos;,
&apos;+970&apos;,&apos;State of Palestine&apos;,
&apos;+507&apos;,&apos;Panama&apos;,
&apos;+675&apos;,&apos;Papua New Guinea&apos;,
&apos;+595&apos;,&apos;Paraguay &apos;,
&apos;+51&apos;,&apos;Peru&apos;,
&apos;+63&apos;,&apos;Philippines&apos;,
&apos;+48&apos;,&apos;Poland&apos;,
&apos;+351&apos;,&apos;Portugal&apos;,
&apos;+1-787&apos;,&apos;Puerto Rico&apos;,
&apos;+1-939&apos;,&apos;Puerto Rico&apos;,
&apos;+974&apos;,&apos;Qatar&apos;,
&apos;+242&apos;,&apos;Bahamas&apos;,
&apos;+40&apos;,&apos;Romania&apos;,
&apos;+250&apos;,&apos;Rwanda&apos;,
&apos;+590&apos;,&apos;Saint Martin &apos;,
&apos;+290&apos;,&apos;Saint Helena.&apos;,
&apos;+1-869&apos;,&apos;Saint Kitts and Nevis&apos;,
&apos;+1-758&apos;,&apos;Saint Lucia &apos;,
&apos;+508&apos;,&apos;Saint Pierre &amp; Miquelon&apos;,
&apos;+1-784&apos;,&apos;Saint Vincent and the Grenadines &apos;,
&apos;+685&apos;,&apos;Samoa&apos;,
&apos;+378&apos;,&apos;San Marino&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Country (Formula)</label>
    <type>Text</type>
</CustomField>