force-app/main/default/objects/Contact/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <formula>SUBSTITUTE(

IF(
NOT(ISBLANK(TEXT(MobileCountry__c))),
MID(
TEXT(MobileCountry__c),
FIND(&quot;+&quot;, TEXT(MobileCountry__c)) + 1,
FIND(&quot; &quot;, TEXT(MobileCountry__c), FIND(&quot;+&quot;, TEXT(MobileCountry__c))) - FIND(&quot;+&quot;, TEXT(MobileCountry__c))
),
&quot;&quot;
) &amp;
IF(
CONTAINS(MobilePhone , &quot; &quot;),
SUBSTITUTE(MobilePhone , &quot; &quot;, &quot;&quot;),
IF(
CONTAINS(MobilePhone , &quot;+&quot;),
SUBSTITUTE(MobilePhone , &quot;+&quot;, &quot;&quot;),
IF(
CONTAINS(MobilePhone , &quot;-&quot;),
SUBSTITUTE(MobilePhone , &quot;-&quot;, &quot;&quot;),
IF(
CONTAINS(MobilePhone , &quot;(&quot;),
SUBSTITUTE(MobilePhone , &quot;(&quot;, &quot;&quot;),
IF(
CONTAINS(MobilePhone , &quot;)&quot;),
SUBSTITUTE(MobilePhone , &quot;)&quot;, &quot;&quot;),
MobilePhone
)
)
)
)
),
&quot; &quot;,
&quot;&quot;
)</formula>
    <label>Mobile Number</label>
    <type>Text</type>
</CustomField>