force-app/main/default/objects/Contact/fields/Mobile_UK__c.field-meta.xml
<CustomField>
    <fullName>Mobile_UK__c</fullName>
    <label>Mobile(UK)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>