force-app/main/default/objects/Contact/fields/Mobile_With_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_With_Country_Code__c</fullName>
    <formula>IF(
CONTAINS(MobilePhone, &quot;+&quot;),
MobilePhone,
TEXT( Mobile_country_code__c) &amp;&quot;-&quot;&amp; MobilePhone
)</formula>
    <label>Mobile With Country Code</label>
    <type>Text</type>
</CustomField>