force-app/main/default/objects/Contact/fields/MobileCountry__c.field-meta.xml
<CustomField>
    <fullName>MobileCountry__c</fullName>
    <label>Mobile Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>+1 Canada</fullName>
            </value>
            <value>
                <fullName>+1 United States</fullName>
            </value>
            <value>
                <fullName>+1242 Bahamas</fullName>
            </value>
            <value>
                <fullName>+1246 Barbados</fullName>
            </value>
            <value>
                <fullName>+1264 Anguilla</fullName>
            </value>
            <value>
                <fullName>+1268 Antigua and Barbuda</fullName>
            </value>
            <value>
                <fullName>+1284 Virgin Islands</fullName>
            </value>
            <value>
                <fullName>+1340 Virgin Islands, U.S.</fullName>
            </value>
            <value>
                <fullName>+1441 Bermuda</fullName>
            </value>
            <value>
                <fullName>+1473 Grenada</fullName>
            </value>
            <value>
                <fullName>+1649 Turks and Caicos Islands</fullName>
            </value>
            <value>
                <fullName>+1664 Montserrat</fullName>
            </value>
            <value>
                <fullName>+1670 Northern Mariana Islands</fullName>
            </value>
            <value>
                <fullName>+1671 Guam</fullName>
            </value>
            <value>
                <fullName>+1684 American Samoa</fullName>
            </value>
            <value>
                <fullName>+1758 Saint Lucia</fullName>
            </value>
            <value>
                <fullName>+1767 Dominica</fullName>
            </value>
            <value>
                <fullName>+1784 Saint Vincent and the Grenadines</fullName>
            </value>
            <value>
                <fullName>+1849 Dominican Republic</fullName>
            </value>
            <value>
                <fullName>+1868 Trinidad and Tobago</fullName>
            </value>
            <value>
                <fullName>+1869 Saint Kitts and Nevis</fullName>
            </value>
            <value>
                <fullName>+1876 Jamaica</fullName>
            </value>
            <value>
                <fullName>+1939 Puerto Rico</fullName>
            </value>
            <value>
                <fullName>+20 Egypt</fullName>
            </value>
            <value>
                <fullName>+211</fullName>
            </value>
            <value>
                <fullName>+212 Morocco</fullName>
            </value>
            <value>
                <fullName>+213 Algeria</fullName>
            </value>
            <value>
                <fullName>+216 Tunisia</fullName>
            </value>
            <value>
                <fullName>+218 Libyan Arab Jamahiriya</fullName>
            </value>
            <value>
                <fullName>+220 Gambia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>