force-app/main/default/objects/Contact/fields/Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Mortgage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mortgage</label>
    <type>Checkbox</type>
</CustomField>