force-app/main/default/objects/Contact/fields/MyCRM_ID__c.field-meta.xml
<CustomField>
    <fullName>MyCRM_ID__c</fullName>
    <label>MyCRM ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>