force-app/main/default/objects/Contact/fields/Negotiator_Name_UK__c.field-meta.xml
<CustomField>
    <fullName>Negotiator_Name_UK__c</fullName>
    <label>Negotiator Name (UK)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>