force-app/main/default/objects/Contact/fields/Networth_1__c.field-meta.xml
<CustomField>
    <fullName>Networth_1__c</fullName>
    <label>Networth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Millionaire</fullName>
            </value>
            <value>
                <fullName>Billionaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>