force-app/main/default/objects/Contact/fields/Networth__c.field-meta.xml
<CustomField>
    <fullName>Networth__c</fullName>
    <label>Net Worth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>