force-app/main/default/objects/Contact/fields/New_Lead_Stage_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>New_Lead_Stage_Time_Stamp__c</fullName>
    <description>As soon as the contact enters the New Lead stage, a time stamp is set by a workflow</description>
    <label>New Lead Stage Time Stamp</label>
    <type>DateTime</type>
</CustomField>