force-app/main/default/objects/Contact/fields/Number_Verified__c.field-meta.xml
<CustomField>
    <fullName>Number_Verified__c</fullName>
    <label>Number Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>