force-app/main/default/objects/Contact/fields/Nurture_Stage_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Stage_Time_Stamp__c</fullName>
    <description>As soon as the contact enters the Nurture stage, a time stamp is set by a workflow</description>
    <label>Nurture Stage Time Stamp</label>
    <type>DateTime</type>
</CustomField>