force-app/main/default/objects/Contact/fields/Offer_Potential_Buyer_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Offer_Potential_Buyer_Tenant__c</fullName>
    <label>Offer Potential Buyer / Tenant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>