force-app/main/default/objects/Contact/fields/Offer_Primary_Seller_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Offer_Primary_Seller_Landlord__c</fullName>
    <label>Offer Primary Seller / Landlord</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>