force-app/main/default/objects/Contact/fields/Office_Code_UK__c.field-meta.xml
<CustomField>
    <fullName>Office_Code_UK__c</fullName>
    <label>Office Code (UK)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>