force-app/main/default/objects/Contact/fields/Office_UK__c.field-meta.xml
<CustomField>
    <fullName>Office_UK__c</fullName>
    <label>Office (UK)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>