force-app/main/default/objects/Contact/fields/One_Only_Brokerage_Registration__c.field-meta.xml
<CustomField>
    <fullName>One_Only_Brokerage_Registration__c</fullName>
    <label>One &amp; Only Brokerage Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Draft Brokerage Agreement Sent to Agency</fullName>
            </value>
            <value>
                <fullName>On hold Missing Documents</fullName>
            </value>
            <value>
                <fullName>Pending with ICD for Signatures</fullName>
            </value>
            <value>
                <fullName>Document not given by the Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>