force-app/main/default/objects/Contact/fields/Original_UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Original_UTM_Campaign__c</fullName>
    <label>Original UTM Campaign</label>
    <length>80</length>
    <type>Text</type>
</CustomField>