force-app/main/default/objects/Contact/fields/ORN_No__c.field-meta.xml
<CustomField>
    <fullName>ORN_No__c</fullName>
    <label>ORN No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>