force-app/main/default/objects/Contact/fields/os_Active_Stage_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>os_Active_Stage_Time_Stamp__c</fullName>
    <label>Active Stage Time Stamp</label>
    <type>DateTime</type>
</CustomField>