force-app/main/default/objects/Contact/fields/os_Address1_UK__c.field-meta.xml
<CustomField>
    <fullName>os_Address1_UK__c</fullName>
    <label>Address1(UK)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>