force-app/main/default/objects/Contact/fields/os_Age__c.field-meta.xml
<CustomField>
    <fullName>os_Age__c</fullName>
    <label>Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>