force-app/main/default/objects/Contact/fields/os_Agency_Contract_Expiry__c.field-meta.xml
<CustomField>
    <fullName>os_Agency_Contract_Expiry__c</fullName>
    <label>Agency Contract Expiry</label>
    <type>Date</type>
</CustomField>