force-app/main/default/objects/Contact/fields/os_Agency_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Agency_Contract_Start_Date__c</fullName>
    <label>Agency Contract Start Date</label>
    <type>Date</type>
</CustomField>