force-app/main/default/objects/Contact/fields/os_Agency_Trade_License_No__c.field-meta.xml
<CustomField>
    <fullName>os_Agency_Trade_License_No__c</fullName>
    <label>Agency Trade License No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>