force-app/main/default/objects/Contact/fields/os_AgentName_pb__c.field-meta.xml
<CustomField>
    <fullName>os_AgentName_pb__c</fullName>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>