force-app/main/default/objects/Contact/fields/os_AgreedToTerms__c.field-meta.xml
<CustomField>
    <fullName>os_AgreedToTerms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreed To Terms</label>
    <type>Checkbox</type>
</CustomField>