force-app/main/default/objects/Contact/fields/os_Al_Zorah_Brokerage_Registration__c.field-meta.xml
<CustomField>
    <fullName>os_Al_Zorah_Brokerage_Registration__c</fullName>
    <label>Al Zorah Brokerage Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Draft Brokerage Agreement Sent to Agency</fullName>
            </value>
            <value>
                <fullName>On hold Missing Documents</fullName>
            </value>
            <value>
                <fullName>Pending for Signatures</fullName>
            </value>
            <value>
                <fullName>Document not given by the Agency</fullName>
            </value>
            <value>
                <fullName>Registration in Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>