force-app/main/default/objects/Contact/fields/os_Alternative_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>os_Alternative_Contact_Details__c</fullName>
    <label>Alternative Contact Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>