force-app/main/default/objects/Contact/fields/os_AOS__c.field-meta.xml
<CustomField>
    <fullName>os_AOS__c</fullName>
    <label>AOS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>